# ceiling-planner

./: .gitignore  pyproject.toml
.rbd/: config.yml  plan-files.yml
docs/: architecture.md
requirements/: functional.md  technical.md  ui.md
src/ceiling_planner/api/: app.py
src/ceiling_planner/api/static/: index.html
src/ceiling_planner/framing/: montants.py  rails.py  sections.py
src/ceiling_planner/geometry/: scanline.py  surface.py
src/ceiling_planner/plates/: optimizer.py
tests/: test_api_plan.py  test_framing_montants.py  test_framing_rails.py  test_framing_section.py  test_plate_optim.py  test_surface_frompoints.py  test_surface_input.py  test_ui_draw.py  test_ui_indicators.py  test_ui_page.py
