[project]
name = "ceiling-planner"
version = "0.1.0"
description = "Material list planner for drop ceilings: outline validation, DTU-based framing, and optimized plasterboard cutting."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "httpx>=0.27",
    "uvicorn>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ceiling_planner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "req(id): links a test to the requirement ID it verifies",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
